<resources>
    <string name="app_name">Huce Android</string>
    <string name="sign_in_to_see_your_dashboard">Sign in to see your dashboard</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="continute">Continute</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="code">Code</string>
    <string name="confirm">Confirm</string>
</resources>